--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,3 +1,8 @@
-h1{
-    background-color: aqua;
+.header{
+    height: 200px;
+    border: 2px solid black;
+}
+img{
+    max-width: 100%;
+    height: 100px;
 }
