--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,8 +1,20 @@
 .header{
-    height: 200px;
-    border: 2px solid black;
+    text-align: center;
 }
-img{
-    max-width: 100%;
-    height: 100px;
+.logo{
+    height: 50px;
+}
+.header nav {
+    background-color: black;
+    line-height: 40px;
+}
+.header nav a{
+    text-decoration: none;
+    color: white;
+    margin-right: 20px;
+    padding: 5px;
+    font-size: 20px;
+}
+.header nav a:hover{
+    background-color: lightgray;
 }
